fix o_1
