# artifacts/api-server/src/routes/index.ts
@@ -3,7 +3,6 @@ import healthRouter from "./health";
 import authRouter from "./auth";
 import barbersRouter from "./barbers";
 import appointmentsRouter from "./appointments";
-import messagesRouter from "./messages";
 import customersRouter from "./customers";
 import pushTokensRouter from "./pushTokens";
 import businessRouter from "./business";
@@ -17,7 +16,6 @@ router.use(accountRouter);
 router.use("/auth", authRouter);
 router.use("/barbers", barbersRouter);
 router.use("/appointments", appointmentsRouter);
-router.use("/messages", messagesRouter);
 router.use("/customers", customersRouter);
 router.use("/push-tokens", pushTokensRouter);
 
