# lib/db/src/schema/index.ts
@@ -5,7 +5,6 @@ export * from "./availability";
 export * from "./slots";
 export * from "./appointments";
 export * from "./blocks";
-export * from "./messages";
 export * from "./pushTokens";
 export * from "./notifications";
 export * from "./passwordResets";
